--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"displayName": "",
 	"description": "cleartime",
 	"version": "0.0.1",
+	"repository": "https://github.com/cleartime/vscode-plugin.git",
 	"engines": {
 		"vscode": "^1.38.0"
 	},
