--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cleartime",
-	"publisher": "gxx",
+	"publisher": "cleartime",
 	"displayName": "",
 	"description": "cleartime",
 	"version": "0.0.1",
